[gd_scene load_steps=4 format=3 uid="uid://b7y4r3ixcgn8b"]

[ext_resource type="Script" path="res://src/entities/troop.gd" id="1_h16p6"]
[ext_resource type="Texture2D" uid="uid://drpc5qnu6pf8u" path="res://assets/sprite/human.png" id="2_hht6v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2hco"]
size = Vector2(16, 48)

[node name="Mummy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_h16p6")
move_speed = 105
attack_range = 60
attack_inverval = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.411765, 0.407843, 0.0627451, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_hht6v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d2hco")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackLabel" type="Label" parent="."]
offset_left = -32.0
offset_top = -48.0
offset_right = 37.0
offset_bottom = -25.0
text = "Curse"
horizontal_alignment = 1

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
